fixes header content alignment regression

--- a/static-build/shared/styles/header.css
+++ b/static-build/shared/styles/header.css
@@ -37,6 +37,8 @@ header {
     & > section > div {
       flex-direction: row;
       padding: 0;
+      max-width: var(--pageMax);
+      margin: auto;
     }
   }
 }
